# photos

./: package.json  pnpm-lock.yaml
src/: App.css  App.tsx  PhotoCell.tsx  PhotoFilmStrip.tsx  PhotoGrid.tsx  PhotoSingle.tsx  main.tsx  state.tsx  utils.ts  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  thumbnails.rs
