[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
imageproc = "0.25.0"
kamadak-exif = "0.5.5"
img-parts = "0.3.0"

[profile.dev.package]
adler.opt-level = 3
crc32fast.opt-level = 3
fdeflate.opt-level = 3
image.opt-level = 3
imageproc.opt-level = 3
miniz_oxide.opt-level = 3
png.opt-level = 3
zune-jpeg.opt-level = 3
